<?xml version="1.0"?>
<package format="2">
  <name>any_velodyne_laserscan</name>
  <version>1.5.8</version>
  <description>
    Extract a single ring of a Velodyne PointCloud2 and publish it as a LaserScan message
  </description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <author email="ynava@anybotics.com">Yoshua Nava</author>
  <author>Micho Radovnikovich</author>
  <author>Kevin Hallenbeck</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/velodyne_laserscan</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>
</package>
