<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>any_velodyne_msgs</name>
  <version>1.5.26</version>
  <description>
    ROS message definitions for Velodyne 3D LIDARs.
  </description>
  <author email="ynava@anybotics.com">Yoshua Nava</author>
  <author>Jack O'Quin</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/any_velodyne_msgs</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend>acl_fault_generator</build_depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <depend condition="$ROS_VERSION == 2">acl_fault_propagation</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
