<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>any_velodyne_msgs</name>
  <version>1.5.26</version>
  <description>
    ROS message definitions for Velodyne 3D LIDARs.
  </description>
  <author email="ynava@anybotics.com">Yoshua Nava</author>
  <author>Jack O'Quin</author>
  <maintainer email="lbergmann@anybotics.com">Lukas Bergmann</maintainer>
  <maintainer email="dlopez@anybotics.com">Daniel López Madrid</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/any_velodyne_msgs</url>
  <url type="repository">https://github.com/ros-drivers/velodyne</url>
  <url type="bugtracker">https://github.com/ros-drivers/velodyne/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>acl_fault_generator</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
